--- a/src/main/webapp/WEB-INF/partials/header.jspf
+++ b/src/main/webapp/WEB-INF/partials/header.jspf
@@ -6,9 +6,7 @@
 				<span class="navbar-toggler-icon"></span>
 		  	</button>
 		  	<div class="collapse navbar-collapse" id="navigateur">
-		  		<ul class ="navbar-nav mr-auto">
-		  		</ul>
-		  		<ul class="navbar-nav">
+		  		<ul class="navbar-nav ml-auto">
 		  			<li class="nav-item">
 		  				<a class="nav-link" href="#">Enchères</a>
 		  			</li>
