--- a/src/main/webapp/css/eniStyle.css
+++ b/src/main/webapp/css/eniStyle.css
@@ -3,3 +3,10 @@
 .eni-bg-light {
 	background-color: #aabecd;
 }
+
+nav.navbar .navbar-nav .nav-item .nav-link {
+	font-size : 1.25rem;
+}
+nav.navbar .navbar-brand {
+	font-size : 1.45rem;
+}
