--- a/src/main/webapp/css/inscription.css
+++ b/src/main/webapp/css/inscription.css
@@ -1,5 +1,42 @@
 @charset "UTF-8";
 
+@media only screen and (max-width: 1025px) {
+  html {
+    font-size: 1.6rem;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+	form.eni-compteAction .form-row.justify-content-center.mb-3 {
+		margin-bottom: 0!important;
+	}
+	form.eni-compteAction .form-row.justify-content-center.mb-3 .col-6 {
+		margin-bottom:1rem!important;
+	}
+}
+
+@media only screen and (max-width: 768px)  {
+  html {
+    font-size: 1.4rem;
+  }
+}
+
+@media only screen and (max-width: 480px)  {
+  html {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 355px) {
+	form.eni-compteAction .col-form-label.col-form-label-lg.eni-mdp-label {
+		font-size: 1.113rem;
+	}
+}
+
+html {
+  font-size: 1rem;
+}
+
 .eni-form-footer input, .eni-form-footer a {
 	height: 5rem;
 }
@@ -7,11 +44,11 @@
 	line-height: 3.7rem;
 }
 .eni-form-footer input {
-	box-shadow: 0px 1rem 2rem #00bd2bad;
+	box-shadow: 0 1rem 2rem #00bd2bad;
 }
 .eni-form-footer input:hover {
 	cursor: pointer;
 }
 .eni-form-footer a {
-	box-shadow: 0px 1rem 2rem #ff5666ab;
+	box-shadow: 0 1rem 2rem #ff5666ab;
 }
