Login page - cleaning partials

--- a/src/main/webapp/WEB-INF/partials/head.jspf
+++ b/src/main/webapp/WEB-INF/partials/head.jspf
@@ -5,9 +5,14 @@
 		content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Page d'inscription">
 	<meta name="author" content="co-authored by BARBATO Marco, EPHRAIM Sean, KUBOTA Teruaki, VAN DE PUTTE Romain">
-	<title>${ !empty pageTitle ? pageTitle : "Eni-Enchères" }</title>
+	<% if (pageTitle != null) {%>
+		<title>Eni-Enchères - <%=pageTitle  %></title>
+	<% }else {%>	
+		<title>Eni-Enchères</title>
+	<% }%>
 	<link rel="icon" type="image/png" href="<%=request.getContextPath()%>/images/logoEniIco.png">
 	<link href="<%=request.getContextPath()%>/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="<%=request.getContextPath()%>/css/eniStyle.css" rel="stylesheet">
 	<link href="<%=request.getContextPath()%>/css/inscription.css" rel="stylesheet">
+	<link href="<%=request.getContextPath()%>/css/login.css" rel="stylesheet">
 </head>
