Utilisateur - Inscription + Login
Servlet marche - erreur s'affiche - attention au .classpath

--- a/src/main/webapp/WEB-INF/partials/header.jspf
+++ b/src/main/webapp/WEB-INF/partials/header.jspf
@@ -18,7 +18,7 @@
 		  				<%}else {%>
 		  				class="nav-link"
 		  				<%}%> 
-		  				  href="#">Enchères</a>
+		  				  href="<%=request.getContextPath()%>">Enchères</a>
 		  			</li>
 		  			<c:choose>
 			  			<c:when test="${!empty user}">
@@ -35,7 +35,7 @@
 				  			</li>
 				  			<li class="nav-item">
 				  				<a 
-				  				<% if (pageTitle == "Profil") {%>
+				  				<% if (pageTitle == "Compte") {%>
 				  				class="nav-link active"
 				  				<%}else {%>
 				  				class="nav-link"
