Login + Update utilisateur

--- a/src/main/webapp/WEB-INF/partials/header.jspf
+++ b/src/main/webapp/WEB-INF/partials/header.jspf
@@ -40,7 +40,7 @@
 				  				<%}else {%>
 				  				class="nav-link"
 				  				<%}%> 
-				  				  href="#">Mon Profil
+				  				  href="<%=request.getContextPath()%>/compte">Mon Profil
 				  				</a>
 				  			</li>
 				  			<li class="nav-item">
