--- a/src/main/webapp/css/inscription.css
+++ b/src/main/webapp/css/inscription.css
@@ -7,10 +7,10 @@
 }
 
 @media only screen and (max-width: 992px) {
-	form.eni-compteAction .form-row.justify-content-center.mb-3 {
+	div.eni-compteAction .form-row.justify-content-center.mb-3 {
 		margin-bottom: 0!important;
 	}
-	form.eni-compteAction .form-row.justify-content-center.mb-3 .col-6 {
+	div.eni-compteAction .form-row.justify-content-center.mb-3 .col-6 {
 		margin-bottom:1rem!important;
 	}
 }
@@ -28,7 +28,7 @@
 }
 
 @media only screen and (max-width: 355px) {
-	form.eni-compteAction .col-form-label.col-form-label-lg.eni-mdp-label {
+	div.eni-compteAction .col-form-label.col-form-label-lg.eni-mdp-label {
 		font-size: 1.113rem;
 	}
 }
