--- a/src/main/webapp/css/eniStyle.css
+++ b/src/main/webapp/css/eniStyle.css
@@ -14,3 +14,7 @@ nav.navbar .navbar-nav .nav-item .nav-link {
 nav.navbar .navbar-brand {
 	font-size : 1.45rem;
 }
+.btn-success.btn-lg.btn-block.text-center.eni-btn-update {
+	height: 5rem;
+	line-height: 3.7rem;
+}
